[package]
name = "vkcp"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.41", features = ["derive"] }
prost = "0.13"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.46.1", features = ["full"] }
toml = "0.9.2"
tonic = "0.13.1"

[build-dependencies]
tonic-build = { version = "0.13.1", features = ["prost"] }
